# mini-space-shooter

./: README.md  main.py  pyproject.toml  ruff.toml
backend/: main.py
tests/: test_basic.py
